PENDING: arm64: dts: qcom: Add DRD mode support for USB0 on QCS8275 IQ EVK
Add DRD mode support for USB1 controller with USB0 port on QCS8275 IQ EVK
using HD3SS322 USB Type-C DRP port controller.

Change-Id: I5c867d4cf99d8cbd10c7d70d27c0e888b0d95468
Signed-off-by: Swati Agarwal <quic_swatagar@quicinc.com>
(cherry picked from commit a4122202e148ba07659eed5eddf05f4b69edbca4)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -290,6 +290,37 @@
 	};
 };
 
+&i2c0 {
+	pinctrl-0 = <&qup_i2c0_default>;
+	pinctrl-names = "default";
+	status = "okay";
+
+	hd3ss3220@67 {
+		compatible = "ti,hd3ss3220";
+		reg = <0x67>;
+		interrupts = < 45 IRQ_TYPE_EDGE_FALLING>;
+
+		connector@0 {
+			compatible = "usb-c-connector";
+			label = "USB-C";
+			data-role = "dual";
+			power-role = "dual";
+
+			ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				port@0 {
+					reg = <0>;
+					hd3ss3220_ep: endpoint {
+						remote-endpoint = <&usb_role_switch>;
+					};
+				};
+			};
+		};
+	};
+};
+
 &i2c15 {
 	pinctrl-0 = <&qup_i2c15_default>;
 	pinctrl-names = "default";
@@ -307,6 +338,13 @@
 		#gpio-cells = <2>;
 		gpio-controller;
 		reg = <0x39>;
+
+		io-exp-hog2 {
+			gpio-hog;
+			gpios = <2 GPIO_ACTIVE_HIGH>;
+			output-low;
+			line-name = "io_exp_gpio2";
+		};
 	};
 
 	expander2: pca953x@3a {
@@ -424,6 +462,17 @@
 	status = "okay";
 };
 
+&soc {
+	vbus_supply_regulator_0: vbus_supply_regulator_0 {
+		compatible = "regulator-fixed";
+		regulator-name = "vbus_supply_0";
+		gpio = <&expander1 2 GPIO_ACTIVE_HIGH>;
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		enable-active-high;
+	};
+};
+
 &tlmm {
 
 	dp_hot_plug_det: dp-hot-plug-det-state {
@@ -492,6 +541,13 @@
 		};
 	};
 
+	qup_i2c0_default: qup-i2c0-state {
+		pins = "gpio17", "gpio18";
+		function = "qup0_se0";
+		drive-strength = <2>;
+		bias-pull-up;
+	};
+
 	qup_i2c15_default: qup-i2c15-state {
 		pins = "gpio91", "gpio92";
 		function = "qup1_se7";
@@ -551,16 +607,28 @@
 	phys = <&usb_1_hsphy>, <&usb_qmpphy>;
 	phy-names = "usb2-phy", "usb3-phy";
 	maximum-speed = "super-speed-plus";
-	role-switch;
 
 	usb-role-switch;
-	dr_mode = "peripheral";
+	dr_mode = "otg";
+
+	qcom,enable-rt;
+	wakeup-source;
+	maximum-speed = "super-speed";
+	vbus_dwc3-supply = <&vbus_supply_regulator_0>;
 	status = "okay";
 
-	port {
-		usb1_role_switch: endpoint {
-			remote-endpoint = <&eud_ep>;
+	ports {
+
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		port@0 {
+			reg = <0>;
+			usb_role_switch: endpoint {
+				remote-endpoint = <&hd3ss3220_ep>;
+			};
 		};
+
 	};
 };
 
