PENDING: arm64: dts: qcom: sa7255p: Enable uart12 in sa7255p
Enable uart12 node to communicate SOC with aurix MCU via UART peripheral.

Change-Id: I100e17ad88684843d93bcb098d344ce574b8182e
Signed-off-by: Praveen Talari <quic_ptalari@quicinc.com>
(cherry picked from commit 7ab5ba2dad43e497265c79bcb2a07a04a8d15ccc)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/sa7255p-ride.dts
+++ b/arch/arm64/boot/dts/qcom/sa7255p-ride.dts
@@ -20,6 +20,7 @@
 		i2c8 = &i2c8;
 		i2c15 = &i2c15;
 		serial0 = &uart7;
+		serial1 = &uart12;
 		spi10 = &spi10;
 		scmichannels = &scmichannels;
 		ufshc1 = &ufs_mem_hc;
@@ -215,6 +216,13 @@
 
 &uart7 {
 	power-domains = <&scmi11_pd 7>, <&scmi11_dvfs 7>;
+	power-domain-names = "power", "perf";
+
+	status = "okay";
+};
+
+&uart12 {
+	power-domains = <&scmi11_pd 12>, <&scmi11_dvfs 12>;
 	power-domain-names = "power", "perf";
 
 	status = "okay";
