PENDING: arm64: dts: qcom: Add support for remoteproc instances
Enable remoteproc for adsp/cdsp/gdsp on IQ8-8275-EVK board.

Change-Id: I324c29ac424cf5d19433a0fbf22d78ca77fd7381
Signed-off-by: Nirmesh Kumar Singh <quic_nkumarsi@quicinc.com>
(cherry picked from commit d0540cf4011154290186a7f98a58b8e266872d9c)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -305,6 +305,21 @@
 	status = "okay";
 };
 
+&remoteproc_adsp {
+	firmware-name = "qcom/qcs8300/adsp.mbn";
+	status = "okay";
+};
+
+&remoteproc_cdsp {
+	firmware-name = "qcom/qcs8300/cdsp0.mbn";
+	status = "okay";
+};
+
+&remoteproc_gpdsp {
+	firmware-name = "qcom/qcs8300/gpdsp0.mbn";
+	status = "okay";
+};
+
 &tlmm {
 
 	dp_hot_plug_det: dp-hot-plug-det-state {
@@ -407,7 +422,6 @@
 
 	status = "okay";
 };
-
 
 &usb_2 {
 	pinctrl-names = "default";
