PENDING: arm64: dts: qcom: Enable BT on QCS8275 IQ8 EVK
Add Bluetooth node and configure uart interface.

Change-Id: I276db2787e1bc93448eac2970c73a2b2bb745d1d
Signed-off-by: Chenhong Zhou <quic_chezhou@quicinc.com>
(cherry picked from commit 5db834b50f10afca32afa886ba02b674f04cff5e)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -21,6 +21,7 @@
 
 	aliases {
 		serial0 = &uart7;
+		serial1 = &uart2;
 	};
 
 	chosen {
@@ -380,6 +381,18 @@
 		function = "qup1_se7";
 		drive-strength = <2>;
 		bias-pull-up;
+	};
+};
+
+&uart2 {
+	pinctrl-names = "default";
+	status = "okay";
+
+	/* HS UART Instance */
+	bluetooth: bluetooth {
+		compatible = "qcom,wcn6855-bt";
+		pinctrl-names = "default";
+		max-speed = <3200000>;
 	};
 };
 
