QCLINUX: ASoC: qcs8275: Add support for QCS8275 RB4
select DMIC codec drivers for qcs8275 board.

Change-Id: Ic914095069f871137a2fdf0b374bac3624b4b295
Signed-off-by: Kumar Anurag Singh <quic_kumaranu@quicinc.com>
(cherry picked from commit aa161f719852fb9fee89e1f7584ad611c3b328b0)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/sound/soc/qcom/Kconfig
+++ b/sound/soc/qcom/Kconfig
@@ -167,6 +167,7 @@ config SND_SOC_QCS9100
         tristate "SoC Machine driver for QCS9100 boards"
         depends on QCOM_APR
         select SND_SOC_MAX98357A
+        select SND_SOC_DMIC
         select SND_SOC_QCOM_COMMON
         select SND_SOC_QDSP6
         select SND_SOC_QCOM_COMMON
