--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -12,6 +12,8 @@
 #include "qcs9075-thermal.dtsi"
 #include "qcs9xxx-reserved-memory.dtsi"
 
+/delete-node/ &usb_2_dwc3;
+
 / {
 	model = "Qualcomm Technologies, Inc. IQ 9075 EVK";
 	compatible = "qcom,qcs9075-iq-9075-evk", "qcom,qcs9075", "qcom,sa8775p";
@@ -1266,14 +1268,30 @@
 };
 
 &usb_2 {
+	reg = <0x0 0x0a400000 0x0 0x200000>;
+	interrupts-extended = <&intc GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH>,
+				<&intc GIC_SPI 444 IRQ_TYPE_LEVEL_HIGH>,
+				<&pdc 10 IRQ_TYPE_EDGE_BOTH>,
+				<&pdc 9 IRQ_TYPE_EDGE_BOTH>;
+	interrupt-names = "dwc_usb3",
+			"pwr_event",
+			"dp_hs_phy_irq",
+			"dm_hs_phy_irq";
+
+	iommus = <&apps_smmu 0x020 0x0>;
+	phys = <&usb_2_hsphy>;
+	phy-names = "usb2-phy";
+
 	pinctrl-names = "default";
 	pinctrl-0 = <&usb2_en_state>;
 
-	status = "okay";
-};
+	dr_mode = "otg";
+	usb-role-switch;
+	role-switch-default-mode = "host";
+	qcom,enable-rt;
+	wakeup-source;
 
-&usb_2_dwc3 {
-	dr_mode = "host";
+	status = "okay";
 };
 
 &usb_2_hsphy {
