QCLINUX: arm64: dts: qcom: Add msm-id & board-id for qcs8275 IQ8
Enable DT identification support for qcs8275 IQ8 EVK board.

Change-Id: I34c97580ef20dc2c4f34bdd3db04281d61110047
Signed-off-by: Nirmesh Kumar Singh <quic_nkumarsi@quicinc.com>
(cherry picked from commit 4de039441c1e35c10aebe0fdf668e797805f16b7)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -11,6 +11,9 @@
 	model = "Qualcomm Technologies, Inc. IQ 8275 EVK";
 	compatible = "qcom,qcs8275-iq-8275-evk", "qcom,qcs8275", "qcom,qcs8300";
 
+	qcom,msm-id = <675 0x10000>;
+	qcom,board-id = <0x00010020 0>, <0x00010019 0>;
+
 	aliases {
 		serial0 = &uart7;
 	};
