PENDING: arm64: dts: qcom: Revert uart0 support for qcs9075-iq-9075-evk
Revert uart0 support for qcs9075-iq-9075-evk to enable robotic
controller. And using only TX and RX, convert a 4-wire UART to a
2-wire UART.

commit be7665ae26f1("Revert "PENDING: arm64: dts: qcom: Add uart0
support for qcs9075-rb8"") reverts commit 756e5172bbc1("PENDING:
arm64: dts: qcom: Add uart0 support for qcs9075-rb8").
Now that the issue is resolved, restore the change.

Change-Id: I17376f413e89ee218058a7665222c9ffcfa76cd6
Signed-off-by: Canfeng Zhuang <quic_czhuang@quicinc.com>
(cherry picked from commit b779ab32a487b120ace7fd1dbd7630d8cdb7d6d6)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -22,6 +22,7 @@
 		ethernet0 = &ethernet0;
 		serial0 = &uart10;
 		serial1 = &uart17;
+		serial2 = &uart0;
 		ufshc1 = &ufs_mem_hc;
 	};
 
@@ -651,6 +652,10 @@
 	};
 };
 
+&qupv3_id_0 {
+	status = "okay";
+};
+
 &qupv3_id_1 {
 	status = "okay";
 };
@@ -820,6 +825,20 @@
 		};
 	};
 
+	qup_uart0_default: qup-uart0-state {
+		qup_uart0_tx: qup0-uart0-tx-pins {
+			pins = "gpio22";
+			function = "qup0_se0";
+			bias-pull-up;
+		};
+
+		qup_uart0_rx: qup0-uart0-rx-pins {
+			pins = "gpio23";
+			function = "qup0_se0";
+			bias-pull-down;
+		};
+	};
+
 	qup_uart10_default: qup-uart10-state {
 		pins = "gpio46", "gpio47";
 		function = "qup1_se3";
@@ -969,8 +988,11 @@
 };
 
 &uart0 {
+	pinctrl-0 = <&qup_uart0_default>;
+	pinctrl-names = "default";
 	qcom,load-firmware;
 	qcom,xfer-mode = <1>;
+	status = "okay";
 };
 
 &uart1 {
