QCLINUX: arm64: dts: qcom: Add audio mdf reserved memory for sa7255
Add reserved regions for audio_mdf_mem, a 32MB memory area
is reserved for audio.

Change-Id: I3033a60d64f8554875330d99ddf383b83d9ceda8
Signed-off-by: hanzh <quic_hanzh@quicinc.com>
(cherry picked from commit d8c6bf1a7a3555a493216c5101eefa65a3ca5626)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/sa7255p.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa7255p.dtsi
@@ -376,6 +376,11 @@
 			reg = <0x0 0x9be82000 0x0 0x700000>;
 		};
 
+		audio_mdf_mem: audio-mdf-region@ae000000 {
+			reg = <0x0 0xae000000 0x0 0x2000000>;
+			no-map;
+		};
+
 		firmware_mem: firmware-region@b0000000 {
 			reg = <0x0 0xb0000000 0x0 0x800000>;
 			no-map;
