QCLINUX: arm64: defconfig: qcom: Enable AMC6821 Sensor driver
Add CONFIG_SENSOR_AMC6821 for qcs9075-iq-9075-evk.

Change-Id: Id7b25133be5fce95ca0d47927804be5466949c33
Signed-off-by: Gaurav Kohli <quic_gkohli@quicinc.com>
(cherry picked from commit 37ac1cfdfffb2eb1795fff6dfd027d0588f586d1)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -367,6 +367,7 @@ CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_PWM_FAN=m
+CONFIG_SENSORS_AMC6821=y
 CONFIG_THERMAL_NETLINK=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=10000
 CONFIG_THERMAL_WRITABLE_TRIPS=y
