PENDING: arm64: dts: qcom: Add fan controller support for qcs9075-iq-9075-evk
Enable fan controller support for qcs9075-iq-9075-evk board.

Change-Id: Ica06915029156e9a213d45f1e02885f72ec58e33
Signed-off-by: Gaurav Kohli <quic_gkohli@quicinc.com>
(cherry picked from commit 68b4b1b9ff19cc1dc1c666bbb6f344794b5d1a27)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -575,6 +575,14 @@
 &i2c19 {
 	qcom,load-firmware;
 	qcom,xfer-mode = <1>;
+	pinctrl-0 = <&qup_i2c19_default>;
+	pinctrl-names = "default";
+	status = "okay";
+
+	fan: fan@18 {
+		compatible = "ti,amc6821";
+		reg = <0x18>;
+	};
 };
 
 &llcc {
@@ -905,6 +913,13 @@
 	qup_spi16_data_clk: qup-spi16-data-clk-state {
 		pins = "gpio86", "gpio87", "gpio88";
 		function = "qup2_se2";
+	};
+
+	qup_i2c19_default: qup-i2c19-state {
+		pins = "gpio99", "gpio100";
+		function = "qup2_se5";
+		drive-strength = <2>;
+		bias-pull-up;
 	};
 };
 
