QCLINUX: firmware: qcom: si-core: Switch to tzmem interfaces
si-core driver currently uses qtee_shmbridge interfaces which is going
to be deprecated.

Replace with qcom_tzmem APIs to align with upstream infrastructure.

Change-Id: Id82aa899ec1aee94b2025bf4300b90b3921cad7c
Signed-off-by: Kuldeep Singh <quic_kuldsing@quicinc.com>
(cherry picked from commit 7e20e75b5a07648acc4c07d005b44182b9303f2d)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/drivers/firmware/qcom/si_core/si_core_xts/Kconfig
+++ b/drivers/firmware/qcom/si_core/si_core_xts/Kconfig
@@ -4,7 +4,7 @@
 #
 config QCOM_SI_CORE_XTS
 	tristate "Secure QSEE Support"
-	depends on QTEE_SHM_BRIDGE && QCOM_SCM_ADDON && QCOM_SI_CORE
+	depends on QCOM_SI_CORE
 	help
 	  Enable SMCInvoke driver which supports capability based secure
 	  communication between QTI Secure Execution Environment (QSEE)
