--- a/drivers/firmware/qcom/si_core/Kconfig
+++ b/drivers/firmware/qcom/si_core/Kconfig
@@ -2,7 +2,7 @@
 
 config QCOM_SI_CORE
 	tristate "Secure QTEE Communication Support"
-	depends on QCOM_SCM_ADDON
+	depends on QCOM_SCM_ADDON && QCOM_TZMEM
 	help
 	  Enable SI-CORE driver which supports capability based secure
 	  communication between QTEE and VM. Using SI-CORE, kernel can
@@ -34,11 +34,11 @@ config QCOM_SI_CORE_WQ
 
 config QCOM_SI_CORE_MEM_OBJECT
 	tristate "Add support for memory object"
-	depends on QCOM_SI_CORE && QTEE_SHM_BRIDGE
+	depends on QCOM_SI_CORE
 	help
 	  Enable support for memory object. This provide an interface
 	  to export or sharing memory with QTEE. It allows kernel clients
 	  to create memory object and do the necessary mapping and unmapping
-	  using QTEE shared memory bridge driver.
+	  using QTEE shared memory driver.
 
 source "drivers/firmware/qcom/si_core/si_core_xts/Kconfig"
