UBUNTU: SAUCE: switch WIFI firmware to *.mbn from *.mdt
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
@@ -877,7 +877,7 @@
 };
 
 &remoteproc_wpss {
-	firmware-name = "qcom/qcs6490/wpss.mdt";
+	firmware-name = "qcom/qcs6490/wpss.mbn";
 	status = "okay";
 };
 
