PENDING: arm64: dts: qcom: tpm enablement for qcs9075-iq-9075-evk
Enable tpm to communicate over spi through gpio for qcs9075-iq-9075-evk.

Change-Id: I6ef79b85881ca214598f5e9e68fc6ed2e7065a35
Signed-off-by: Khalid-Faisal <quic_afaisal@quicinc.com>
(cherry picked from commit b1137504b24d8c01d08b999dd16f49bd197f5d10)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -23,6 +23,7 @@
 		serial0 = &uart10;
 		serial1 = &uart17;
 		serial2 = &uart0;
+		spi16 = &spi16;
 		ufshc1 = &ufs_mem_hc;
 	};
 
@@ -929,6 +930,16 @@
 		drive-strength = <2>;
 		bias-pull-up;
 	};
+
+	qup_spi16_cs: qup-spi16-cs-state {
+		pins = "gpio89";
+		function = "qup2_se2";
+	};
+
+	qup_spi16_data_clk: qup-spi16-data-clk-state {
+		pins = "gpio86", "gpio87", "gpio88";
+		function = "qup2_se2";
+	};
 };
 
 &pcie0 {
@@ -1131,6 +1142,21 @@
 		regulator-boot-on;
 		enable-active-high;
 		regulator-always-on;
+	};
+};
+
+&spi16 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&qup_spi16_cs>, <&qup_spi16_data_clk>;
+	status = "okay";
+
+	st33htpm0: st33htpm@0 {
+		compatible = "st,st33htpm-spi";
+		reg = <0>;
+		spi-max-frequency = <20000000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		status = "okay";
 	};
 };
 
