--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -623,13 +623,6 @@
 			  "USB2_PWR_EN",
 			  "USB2_FAULT";
 
-	bt_en_state: bt-en-state {
-		pins = "gpio8";
-		function = "normal";
-		output-low;
-		bias-pull-down;
-	};
-
 	usb2_en_state: usb2-en-state {
 		pins = "gpio9";
 		function = "normal";
@@ -792,14 +785,6 @@
 };
 
 &tlmm {
-	bt_bootstrap_default: bt_bootstrap_default {
-		pins = "gpio147";
-		function = "gpio";
-		input-enable;
-		bias-pull-up;
-		drive-strength = <2>;
-	};
-
 	dp_hot_plug_det: dp-hot-plug-det-state {
 		pins = "gpio101";
 		function = "edp0_hot";
@@ -1081,7 +1066,7 @@
 };
 
 &uart17 {
-	pinctrl-0 = <&qup_uart17_default>, <&bt_bootstrap_default>;
+	pinctrl-0 = <&qup_uart17_default>;
 	pinctrl-names = "default";
 	qcom,load-firmware;
 	qcom,xfer-mode = <1>;
@@ -1091,8 +1076,6 @@
 	bluetooth: bluetooth {
 		compatible = "qcom,wcn6855-bt";
 		pinctrl-names = "default";
-		pinctrl-0 = <&bt_en_state>;
-		enable-gpios = <&pmm8654au_1_gpios 8 GPIO_ACTIVE_HIGH>; /* BT_EN */
 		max-speed = <3200000>;
 	};
 };
