PENDING: arm64: dts: qcom: qcs8275: Enable gpi-dma node
Enable gpi-dma0 and gpi-dma1 nodes for busses usecase on qcs8275 IQ8 EVK
board.

Change-Id: Ic2e1ff4dc88f1c71975930778af01cca3a06f8e9
Signed-off-by: Viken Dadhaniya <quic_vdadhani@quicinc.com>
(cherry picked from commit 2256758a228f44861ed0732da7dfae0f9d9a8daf)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -343,7 +343,14 @@
 		gpio-controller;
 		reg = <0x3e>;
 	};
+};
 
+&gpi_dma0 {
+	status = "okay";
+};
+
+&gpi_dma1 {
+	status = "okay";
 };
 
 &pcie0 {
