QCLINUX: arm64: dts: qcom: update lpi-quad pin functions for qcs9075-rb8
BugLink: https://bugs.launchpad.net/carmel/bugs/2109952 ([RB8][x03] qcom-sa8775p-lpass-lpi-pinctrl errors found in dmesg)

update lpi-quad pin functions for qcs9075-rb8 in sleep.

Change-Id: I35062002028d8e1fca819d6579d8bb34cd92db2a
Signed-off-by: Kumar Anurag Singh <quic_kumaranu@quicinc.com>
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
@@ -159,7 +159,7 @@
 
 	lpass_quad_clk_sleep: quad-clk-sleep-state {
 			pins = "gpio0";
-			function = "gpio";
+			function = "qua_mi2s_sclk";
 			drive-strength = <2>;
 			bias-pull-down;
 			input-enable;
@@ -175,7 +175,7 @@
 
 	lpass_quad_data_sleep: quad-data-sleep-state {
 			pins = "gpio2", "gpio3", "gpio4", "gpio5";
-			function = "gpio";
+			function = "qua_mi2s_data";
 			drive-strength = <2>;
 			bias-pull-down;
 			input-enable;
@@ -190,7 +190,7 @@
 
 	lpass_quad_ws_sleep: quad-ws-sleep-state {
 			pins = "gpio1";
-			function = "gpio";
+			function = "qua_mi2s_ws";
 			drive-strength = <2>;
 			bias-pull-down;
 			input-enable;
