arm64: dts: rubikpi: enable fan
Change-Id: I4768121db254d6a89b73b7e34daefca71a9f502f
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -1050,3 +1050,23 @@
 
 	status = "okay";
 };
+
+/ {
+	fan0: pwm-fan {
+		compatible = "pwm-fan";
+		pwms = <&pm8350c_pwm 3 1000000>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&fan_pwm_out_default>;
+	};
+};
+
+&pm8350c_gpios {
+	fan_pwm_out_default: fan_pwm_out_default {
+		pins = "gpio8";
+		function = "func1";
+		power-source = <1>;
+		drive-push-pull;
+		output-high;
+		qcom,drive-strength = <3>;
+	};
+};
