net: ax88179b: add driver
Change-Id: I974d751abffc368b75cfb75acae1bb262d638a21
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/drivers/net/ethernet/asix/Kconfig
+++ b/drivers/net/ethernet/asix/Kconfig
@@ -32,4 +32,11 @@ config SPI_AX88796C_COMPRESSION
 
 	  If unsure say N.
 
+config AX88179B
+	tristate "Asix AX88179B support"
+	select PHYLIB
+	depends on USB
+	help
+	  Say Y here if you intend to use ASIX AX88179B attached in USB mode.
+
 endif # NET_VENDOR_ASIX
