--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -324,8 +324,8 @@
 		};
 
 		vreg_l6c_2p96: ldo6 {
-			regulator-min-microvolt = <1650000>;
-			regulator-max-microvolt = <3544000>;
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
 			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 
@@ -608,16 +608,59 @@
 	status = "okay";
 };
 
+&tlmm {
+	wifi_reset_active: wifi_reset_active {
+		pins = "gpio16";
+		function = "gpio";
+		drive-strength = <2>;
+		output-high;
+		bias-disable;
+	};
+};
+
+/ {
+	vreg_sdio_wifi_1p8: vreg_sdio_wifi_1p8 {
+		compatible = "regulator-fixed";
+		regulator-name = "vreg_sdio_wifi_1p8";
+		enable-active-high;
+		gpio = <&tlmm 125 GPIO_ACTIVE_HIGH>;
+		regulator-always-on;
+		regulator-enable-ramp-delay = <50000>;
+	};
+
+	vreg_sdio_bt_reset_1p8: vreg_sdio_bt_reset_1p8 {
+		pinctrl-0 = <&wifi_reset_active>;
+		pinctrl-names = "default";
+		compatible = "regulator-fixed";
+		regulator-name = "vreg_sdio_bt_reset_1p8";
+		regulator-always-on;
+		enable-active-high;
+		gpio = <&tlmm 17 GPIO_ACTIVE_HIGH>;
+		vin-supply = <&vreg_sdio_wifi_1p8>;
+	};
+
+	bcmdhd_wlan: bcmdhd_wlan {
+		status = "okay";
+		compatible = "linux,bcmdhd_wlan";
+		gpio_wl_reg_on = <&tlmm 16 GPIO_ACTIVE_HIGH>;
+		gpio_wl_host_wake = <&tlmm 38 GPIO_ACTIVE_HIGH>;
+		vdda-supply = <&vreg_sdio_bt_reset_1p8>;
+	};
+};
+
 &sdhc_2 {
 	status = "okay";
 
-	pinctrl-0 = <&sdc2_clk>, <&sdc2_cmd>, <&sdc2_data>, <&sd_cd>;
-	pinctrl-1 = <&sdc2_clk_sleep>, <&sdc2_cmd_sleep>, <&sdc2_data_sleep>, <&sd_cd>;
+	pinctrl-0 = <&sdc2_clk>, <&sdc2_cmd>, <&sdc2_data>;
+	pinctrl-1 = <&sdc2_clk_sleep>, <&sdc2_cmd_sleep>, <&sdc2_data_sleep>;
 
 	vmmc-supply = <&vreg_l9c_2p96>;
 	vqmmc-supply = <&vreg_l6c_2p96>;
 
-	cd-gpios = <&tlmm 91 GPIO_ACTIVE_LOW>;
+	non-removable;
+	keep-power-in-suspend;
+
+	/delete-property/ cd-gpios;
 };
 
 /delete-node/ &usb_1_dwc3;
@@ -733,12 +776,6 @@
 		drive-strength = <2>;
 		bias-disable;
 		output-high;
-	};
-
-	sd_cd: sd-cd-state {
-		pins = "gpio91";
-		function = "gpio";
-		bias-pull-up;
 	};
 };
 
